name:                mikrokosmosjs
version:             0.1.0
synopsis:            Call Mikrokosmos from JS
description:         Call Mikrokosmos from JS
homepage:            https://github.com/mroman42/mikrokosmos-js
license:             GPL-3
license-file:        LICENSE
author:              Mario Román
maintainer:          mromang08@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mikrojs
  hs-source-dirs:      source
                       mikrokosmos/source
                       
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if impl(ghcjs >= 0.2.1)
    ghcjs-options:     -dedupe

  build-depends:       base,
                       mtl >=2.2,
                       containers >= 0.5,
                       haskeline >=0.7,
                       parsec >=3,
                       ansi-terminal,
                       multimap,
                       HUnit >=1.0,
                       options,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       tasty-quickcheck,
                       directory >= 1.0,
                       process,
                       text,
                       ghcjs-base
  default-language:    Haskell2010
  other-modules: Format
                 Lambda
                 NamedLambda
                 MultiBimap
                 Interpreter
                 Environment
                 Ski
                 Stlc.Types
                 Main
                 Stlc.Gentzen
                 Stlc.Block
                 Libraries
  
source-repository head
  type:     git
  location: https://github.com/mroman42/mikrokosmos-js
